Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34930

Windows are not shown full screen

XMLWordPrintable

    • e89a9428d5a9b5e5494954dfc3ea4233563c5906

      On BB10, where the first window is treated as the root window, Qt windows are not shown full screen, although showFullScreen() is called on them.

        For Gerrit Dashboard: QTBUG-34930
        # Subject Branch Project Status CR V

            bweimer Bernd Weimer
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes